# frjmp

./: .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish-package-pypi.yml
app/inputs/: industrial_plan.py  initial_conditions.py  problem_setup.py
examples/: basic_example.py  plot_example.py  shift_example.py
frjmp/model/: adapter.py  logger.py  objective_function.py  problem.py  solution.py
frjmp/model/constraints/: assignment.py  capacity.py  movement.py
frjmp/model/parameters/: movement_dependency.py  position_aircraft_model.py  position_unit_model.py  positions_configuration.py
frjmp/model/sets/: aircraft.py  job.py  need.py  phase.py  position.py  unit.py
frjmp/model/variables/: assignment.py  movement.py  pattern_assignment.py
frjmp/plotting/: assignment.py  movement.py  step_assignment.py
frjmp/utils/: preprocessing_utils.py  timeline_utils.py  validation_utils.py
tests/: __init__.py  setup.py  test_initial_conditions.py  test_preprocessing_utils.py  test_problem_fixed_variables.py  test_timeline_utils.py  test_validation_utils.py
tests/constraints/: test_aircraft_movement_constraint.py  test_capacity_constraint.py  test_job_assignment_constraints.py  test_movement_constraint.py
tests/parameters/: test_movement_dependency.py  test_positions_aircraft_model_dependency.py  test_positions_unit_model_dependency.py
